code_exp/log/run_experiments_separately_20250715_101840.log
2025-07-15 10:18:40,191 - INFO - ====== 开始分别运行所有实验 ======
2025-07-15 10:18:40,191 - INFO - 步骤1: 生成证书数据集
2025-07-15 10:18:40,191 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/generate_dataset.py']
2025-07-15 10:18:49,149 - INFO - 命令成功完成：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/generate_dataset.py']
2025-07-15 10:18:49,149 - INFO - 步骤2: 检查Hardhat节点
2025-07-15 10:18:49,152 - INFO - Hardhat节点已在运行
2025-07-15 10:18:49,152 - INFO - 运行 实验1: 基础性能评估
2025-07-15 10:18:49,152 - INFO - 运行实验1 - 基础性能评估
2025-07-15 10:18:49,152 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp1.py']
2025-07-15 10:18:49,161 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp1.py']
2025-07-15 10:18:49,161 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp1.py", line 50
    result = 
             ^
SyntaxError: invalid syntax

2025-07-15 10:18:49,161 - ERROR - 实验1: 基础性能评估 运行失败，继续下一个实验
2025-07-15 10:18:49,161 - INFO - 运行 实验2: 吞吐量分析
2025-07-15 10:18:49,161 - INFO - 运行实验2 - 吸吐量分析
2025-07-15 10:18:49,161 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp2.py']
2025-07-15 10:18:49,170 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp2.py']
2025-07-15 10:18:49,170 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp2.py", line 50
    result = 
             ^
SyntaxError: invalid syntax

2025-07-15 10:18:49,171 - ERROR - 实验2: 吞吐量分析 运行失败，继续下一个实验
2025-07-15 10:18:49,171 - INFO - 运行 实验3: 可扩展性分析
2025-07-15 10:18:49,171 - INFO - 运行实验3 - 可扩展性测试
2025-07-15 10:18:49,171 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp3.py']
2025-07-15 10:18:49,179 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp3.py']
2025-07-15 10:18:49,179 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp3.py", line 50
    result = 
             ^
SyntaxError: invalid syntax

2025-07-15 10:18:49,179 - ERROR - 实验3: 可扩展性分析 运行失败，继续下一个实验
2025-07-15 10:18:49,179 - INFO - 运行 实验4: 存储成本对比分析
2025-07-15 10:18:49,179 - INFO - 运行实验4 - 存储成本对比分析
2025-07-15 10:18:49,179 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp4.py']
2025-07-15 10:18:49,188 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp4.py']
2025-07-15 10:18:49,188 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp4.py", line 50
    result = 
             ^
SyntaxError: invalid syntax

2025-07-15 10:18:49,188 - ERROR - 实验4: 存储成本对比分析 运行失败，继续下一个实验
2025-07-15 10:18:49,188 - INFO - 运行 实验5: 撤销机制效率分析
2025-07-15 10:18:49,188 - INFO - 运行实验5 - 撤销机制效率分析
2025-07-15 10:18:49,188 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py']
2025-07-15 10:18:49,196 - ERROR - 命令执行失败：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py']
2025-07-15 10:18:49,196 - ERROR - 错误输出：  File "/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/temp_exp5.py", line 50
    result = 
             ^
SyntaxError: invalid syntax

2025-07-15 10:18:49,196 - ERROR - 实验5: 撤销机制效率分析 运行失败，继续下一个实验
2025-07-15 10:18:49,196 - INFO - 运行 实验6: 节点故障恢复测试
2025-07-15 10:18:49,196 - INFO - 运行实验6 - 节点故障恢复测试
2025-07-15 10:18:49,196 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/run_fault_test.py']
2025-07-15 10:21:18,000 - INFO - 命令成功完成：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/run_fault_test.py']
2025-07-15 10:21:18,000 - INFO - 实验6: 节点故障恢复测试 运行成功
2025-07-15 10:21:18,000 - INFO - 分析所有实验结果
2025-07-15 10:21:18,001 - INFO - 分析所有实验结果
2025-07-15 10:21:18,001 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/analyze_results.py']
2025-07-15 10:21:19,260 - INFO - 命令成功完成：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/analyze_results.py']
2025-07-15 10:21:19,260 - INFO - 运行命令：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/analyze_fault_tolerance.py']
2025-07-15 10:21:19,934 - INFO - 命令成功完成：['python', '/Users/yangzongyou/Downloads/iccip 2022/code_exp/scripts/analyze_fault_tolerance.py']
2025-07-15 10:21:19,934 - INFO - 实验结果分析成功
2025-07-15 10:21:19,934 - INFO - ====== 所有实验运行完成 ======
2025-07-15 10:21:19,934 - INFO - 请查看 data/ 目录和 analysis/ 目录获取实验结果和分析
